ui-walkthrough/2/comment overflow issues

--- a/src/styles/components/_comment.scss
+++ b/src/styles/components/_comment.scss
@@ -14,7 +14,6 @@
   &__body {
     height: 100%;
     padding-top: 5px;
-    overflow: hidden;
   }
 
   &__rubric-comment {
@@ -90,17 +89,22 @@
 
   &__footer {
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    &__line {
+      font-style: italic;
+      color: $dark-grey;
+      align-self: flex-end;
+      margin-right: auto;
+    }
     &__author {
       font-style: italic;
       color: $dark-grey;
-      width: calc(100% - 60px);
-    }
-    &__buttons {
-      width: 20px;
-      position: absolute;
-      right: 11px;
-      bottom: 1px;
+      min-width: 40px;
+      word-wrap: break-word;
+      align-self: flex-end;
+      margin-right: auto;
     }
   }
 
@@ -144,6 +148,8 @@
   }
 
   &:hover {
-    border: 2px solid $dark-grey !important;
+    border-top: 2px solid $dark-grey !important;
+    border-bottom: 2px solid $dark-grey !important;
+    border-left: 2px solid $dark-grey !important;
   }
 }
